Add more components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,3 +17,5 @@
 </div>
 
 <ree-datepicker></ree-datepicker>
+<ree-dropdown [list]="dropdownSelect"></ree-dropdown>
+<ree-accordion></ree-accordion>
