--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,34 +1,41 @@
-<!-- Highlight Card -->
-<div class="card highlight-card card-small">
-
-  <svg id="rocket" alt="Rocket Ship" xmlns="http://www.w3.org/2000/svg" width="101.678" height="101.678" viewBox="0 0 101.678 101.678">
-    <g id="Group_83" data-name="Group 83" transform="translate(-141 -696)">
-      <circle id="Ellipse_8" data-name="Ellipse 8" cx="50.839" cy="50.839" r="50.839" transform="translate(141 696)" fill="#dd0031"/>
-      <g id="Group_47" data-name="Group 47" transform="translate(165.185 720.185)">
-        <path id="Path_33" data-name="Path 33" d="M3.4,42.615a3.084,3.084,0,0,0,3.553,3.553,21.419,21.419,0,0,0,12.215-6.107L9.511,30.4A21.419,21.419,0,0,0,3.4,42.615Z" transform="translate(0.371 3.363)" fill="#fff"/>
-        <path id="Path_34" data-name="Path 34" d="M53.3,3.221A3.09,3.09,0,0,0,50.081,0,48.227,48.227,0,0,0,18.322,13.437c-6-1.666-14.991-1.221-18.322,7.218A33.892,33.892,0,0,1,9.439,25.1l-.333.666a3.013,3.013,0,0,0,.555,3.553L23.985,43.641a2.9,2.9,0,0,0,3.553.555l.666-.333A33.892,33.892,0,0,1,32.647,53.3c8.55-3.664,8.884-12.326,7.218-18.322A48.227,48.227,0,0,0,53.3,3.221ZM34.424,9.772a6.439,6.439,0,1,1,9.106,9.106,6.368,6.368,0,0,1-9.106,0A6.467,6.467,0,0,1,34.424,9.772Z" transform="translate(0 0.005)" fill="#fff"/>
-      </g>
-    </g>
-  </svg>
-
-  <span>{{ title }} app is running!</span>
-
- 
-</div>
-
-<div>
+<div class="container">
+  <!-- <h1 class="g-title">REE</h1> -->
+  <div class="c-header-logo">
+    <img class="c-header-logo-img" src="https://www.ree.es/sites/all/themes/webree/logo.png">
+  </div>
   <form [formGroup]="formGroup">
+
+    <p>Dropdown simple</p>
     <div>
-        <ree-selector formControlName="selector" [id]="'selector1'" [typeInput]="'switch'" [label]="'Switch'"></ree-selector>
+      <ree-dropdown formControlName="dropdown" [label]="'Selector'" [list]="selectItems"> </ree-dropdown>
     </div>
-    <div>
-       <ree-dropdown formControlName="dropdown" [label]="'Selector'" [list]="selectItems"> </ree-dropdown> 
-    </div>
-    <ree-dropdown formControlName="dropdown2" [label]="'Selector Multiple'" [list]="selectItems" [multiple]="true"> </ree-dropdown>
+    <p>Dropdown Múltiple</p>
+    <ree-dropdown formControlName="dropdown2" [label]="'Selector Multiple'" [list]="selectItems" [multiple]="true">
+    </ree-dropdown>
+    <p>Datepicker</p>
     <ree-datepicker formControlName="datepicker" [id]="'datepicker'" [label]="'Fecha de emisión'"></ree-datepicker>
+    <p>Email</p>
     <ree-input formControlName="email" [id]="'input1'" [typeInput]="'email'" [label]="'Email'"></ree-input>
+    <p>Contraseña</p>
     <ree-input formControlName="password" [id]="'input2'" [typeInput]="'password'" [label]="'Contraseña'"></ree-input>
-    <ree-radio formControlName="radioButton" [idRadioGroup]="'radioButton'" [radioButtons]="radioButtonConfig"></ree-radio>
-    <ree-button [label]="'Prueba formulario'" (clickEmitter)="verFormulario($event)"></ree-button>
+    <div class="radios">
+      <div class="addMargin">
+        <p>Radio</p>
+        <ree-radio formControlName="radioButton" [idRadioGroup]="'radioButton'" [radioButtons]="radioButtonConfig">
+        </ree-radio>
+      </div>
+      <div>
+        <p>Switch</p>
+
+        <ree-selector formControlName="selector" [id]="'selector1'" [typeInput]="'switch'" [label]="'Switch'">
+        </ree-selector>
+      </div>
+    </div>
+    <div class="buttons">
+      <ree-button [label]="'Prueba formulario'" (clickEmitter)="verFormulario($event)"></ree-button>
+      <ree-button [label]="'Boton secundario'" [typeButton]="'btn-secondary'"></ree-button>
+      <ree-button [label]="'Boton secundario'" [disabled]="true"></ree-button>
+    </div>
+
   </form>
 </div>
