--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,6 @@
+:host{
+  background-color:#AAA;
+}
 .buttons{
     display: flex;
     flex-flow: row nowrap;
@@ -21,38 +24,38 @@ h1{
     float: center;
 }
 
-.c-header {
-    width: 100%;
-    height: 54px;
-    border-bottom: 1px solid #D0D0D0;
-    background-color: #D0D0D0; // pink;//
-    &-first-level{
-      width: 100%;
-      display: flex;
-      flex-flow: row nowrap;
-      align-items: center;
-      justify-content: space-between;
-    }
-    &-logo{
-      margin: 10px 0 10px 20px;
-      box-sizing: border-box;
-      flex-grow:1;
-      & img{
-        box-sizing: border-box;
-       // margin: 10px 0 10px 20px;
-        height: 34px;
-        width: 64px;
-      }
-    }
+// .c-header {
+//     width: 100%;
+//     height: 54px;
+//     border-bottom: 1px solid #D0D0D0;
+//     background-color: #D0D0D0; // pink;//
+//     &-first-level{
+//       width: 100%;
+//       display: flex;
+//       flex-flow: row nowrap;
+//       align-items: center;
+//       justify-content: space-between;
+//     }
+//     &-logo{
+//       margin: 10px 0 10px 20px;
+//       box-sizing: border-box;
+//       flex-grow:1;
+//       & img{
+//         box-sizing: border-box;
+//        // margin: 10px 0 10px 20px;
+//         height: 34px;
+//         width: 64px;
+//       }
+//     }
 
-    &-menu{
+//     &-menu{
       
-      flex-grow:1;
+//       flex-grow:1;
       
-      &-img{
-        margin: 15px 20px 15px 0;
-        height: 20px;
-        width: 20px;
-      }
-    }
-  }
+//       &-img{
+//         margin: 15px 20px 15px 0;
+//         height: 20px;
+//         width: 20px;
+//       }
+//     }
+//   }
