--- a/src/app/components/second-component/second-component.component.html
+++ b/src/app/components/second-component/second-component.component.html
@@ -1,3 +1,5 @@
 <div class="container">
-<ree-datepicker (valueChange)="cambios()" [value]="value" [id]="'1,1'" [(ngModel)]="value"></ree-datepicker>
+    <!-- <form [formGroup]="formGroup"> -->
+        <ree-datepicker [label]="'value'" [id]="'1,1'" [(ngModel)]="value" ></ree-datepicker>
+    <!-- </form> -->
 </div>
